tests/baselines/reference/overloadOnConstInheritance3.errors.txt
tests/cases/compiler/overloadOnConstInheritance3.ts(4,11): error TS2430: Interface 'Deriver' incorrectly extends interface 'Base'.
  Types of property 'addEventListener' are incompatible.
    Type '{ (x: "bar"): string; (x: "foo"): string; }' is not assignable to type '(x: string) => any'.
      Type '{ (x: "bar"): string; (x: "foo"): string; }' provides no match for the signature '(x: string): any'


==== tests/cases/compiler/overloadOnConstInheritance3.ts (1 errors) ====
    interface Base {
        addEventListener(x: string): any;
    }
    interface Deriver extends Base {
              ~~~~~~~
!!! error TS2430: Interface 'Deriver' incorrectly extends interface 'Base'.
!!! error TS2430:   Types of property 'addEventListener' are incompatible.
!!! error TS2430:     Type '{ (x: "bar"): string; (x: "foo"): string; }' is not assignable to type '(x: string) => any'.
!!! error TS2430:       Type '{ (x: "bar"): string; (x: "foo"): string; }' provides no match for the signature '(x: string): any'
        // shouldn't need to redeclare the string overload
        addEventListener(x: 'bar'): string;
        addEventListener(x: 'foo'): string;
    }
    